--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,12 @@
 /Prueba 2 10-10/Prueba 2 correccion/Benjamin Mora/Benjamin Mora Torres/Benjamin Mora Torres/nbproject/private/
 /ayudantia111018/nbproject/private/
 /ayudantia111018/build/
+/Prueba 3 22-11/AgendaBDDFotoSolucion_ProfeRadioButton/Benjamin Mora/Benjamin Mora Torres/Benjamin Mora Torres/build/
+/Prueba 3 22-11/AgendaBDDFotoSolucion_ProfeRadioButton/Benjamin Mora/Benjamin Mora Torres/Benjamin Mora Torres/nbproject/private/
+/Prueba 3 22-11/Benjamin Mora/Benjamin Mora Torres/Benjamin Mora Torres/build/
+/Prueba 3 22-11/Benjamin Mora/Benjamin Mora Torres/Benjamin Mora Torres/nbproject/private/
+/Prueba 3 22-11/Semana14_CrudConsultav3(14-11-2016)/build/
+/Prueba 3 22-11/Semana14_CrudConsultav3(14-11-2016)/nbproject/private/
+/Perrito/nbproject/private/
+/Mascota/nbproject/private/
+/Mascota/build/
